# ledmatrix_widgets

./: .gitignore  Cargo.toml  Dockerfile  PKGBUILD  README.md  nohup.out  release.sh
.rpm/: ledmatrix_widgets.spec
resources/: ledmatrix_widgets.service
src/: ledmatrix.rs  main.rs  matrix.rs  widget.rs
wix/: main.wxs
